--- a/src/css/Navbar.css
+++ b/src/css/Navbar.css
@@ -1,3 +1,9 @@
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .flex {
   display: flex;
 }
@@ -5,7 +11,7 @@
 nav {
   justify-content: space-between;
   align-items: center;
-  padding: 1rem;
+  padding: 1.5rem;
 }
 nav img {
   width: 80px;
