--- a/src/css/base.css
+++ b/src/css/base.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Space+Mono:ital,wght@0,400;0,700;1,400&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Space Mono', monospace;
+  font-family: "Space Mono", monospace;
+  list-style: none;
 }
 
 .line {
-  width: 90%;
+  width: 95%;
   height: 2px;
   background-color: rgb(225, 223, 223);
   margin: auto;
