Add code for reserve/cancel a rocket

--- a/src/scss/RocketsContainer.scss
+++ b/src/scss/RocketsContainer.scss
@@ -22,5 +22,12 @@
     color: white;
     border: solid #0d6efd;
     border-radius: 5px;
+    padding: 0.4rem;
   }
+}
+
+.btn-cancel {
+  background-color: #fff;
+  border: solid #5a5a5a;
+  color: #5a5a5a;
 }
