--- a/src/css/mission.css
+++ b/src/css/mission.css
@@ -19,26 +19,22 @@ table .name {
   display: flex;
   font-weight: bold;
 }
-table .status {
-  padding: 1rem;
-}
-table .status button {
+table .btn button {
   white-space: nowrap;
   padding: 0.4rem;
   border: none;
   border-radius: 0.2rem;
-  background-color: rgb(168, 168, 168);
-  color: white;
   font-weight: bold;
 }
-table .joinBtn {
+table .join {
   padding: 1rem;
 }
-table .joinBtn button {
-  white-space: nowrap;
-  padding: 0.4rem;
+table .join button {
   background-color: #fad9bf;
-  border: none;
-  border-radius: 0.2rem;
-  font-weight: bold;
+}
+table .leave {
+  padding: 1rem;
+}
+table .leave button {
+  background-color: #fd747b;
 }
