--- a/src/scss/Myprofile.scss
+++ b/src/scss/Myprofile.scss
@@ -2,4 +2,10 @@
   display: flex;
   padding: 3rem;
   justify-content: space-between;
+
+  .rockets-ul {
+    border: 1px solid #e1dfdf;
+    border-radius: 2px;
+    width: 40vw;
+  }
 }
